Did the last two challenges.

--- a/os-lab/CMakeLists.txt
+++ b/os-lab/CMakeLists.txt
@@ -25,3 +25,5 @@ add_executable(ch5_exec_examples src/ch5_exec_examples.c)
 add_executable(ch6_pipe_sum src/ch6_pipe_sum.c)
 add_executable(ch7_pipeline src/ch7_pipeline.c)
 add_executable(ch8_wait_nonblock src/ch8_wait_nonblock.c)
+add_executable(ch9_zombie src/ch9_zombie.c)
+add_executable(ch10_pool src/ch10_pool.c)
